# ezg22-waterverse

./: .gitignore  .gitmodules  CMakeLists.txt  Sphere.cpp  Sphere.h  cube.txt  drops.ipynb  test.ipynb
assets/: background.txt  camera.txt  drops.txt  swarm.txt
assets/shaders/: cubeShadow.geom  cubeShadow.vert  debugShadow.frag  debugShadow.vert  depth.frag  depthSkinning.vert  env.frag  env.vert  fragment.frag  gbuffer.frag  gbuffer.vert  main.frag  main.vert  shadow.frag  shadow.vert  skinning.frag  skinning.vert  ssao.frag  ssao.vert  ssao_blur.frag  ssao_geometry.frag  ssao_geometry.vert  ssao_lighting.frag  static.frag  static.vert  vertex.vert
assets/shaders/sky/: environment.frag  environment.vert  sky.frag  sky.vert  skybox.frag  skybox.vert
assets/shaders/water/: caustics.frag  caustics.vert  drop.comp  gbuffer-water.frag  gbuffer-water.vert  normal.comp  sphere.comp  test.comp  update.comp  water.frag  water.vert
src/: AnimatedModel.cpp  AnimatedModel.h  Camera.cpp  Camera.h  ComputeShader.h  ComputerShader.cpp  Cube.cpp  Cube.h  CubeMap.cpp  CubeMap.h  DirLight.cpp  DirLight.h  FileWatcher.cpp  FileWatcher.h  GBuffer.cpp  GBuffer.h  GameObject.cpp  GameObject.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  MyTextureLoader.cpp  MyTextureLoader.h  PointLight.cpp  PointLight.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  SSAO.cpp  SSAO.h  SafeQueue.h  Shader.cpp  (+20 more)
